--- a/src/components/Products/ProductListItem.css
+++ b/src/components/Products/ProductListItem.css
@@ -23,3 +23,12 @@
 .product-image img {
     height: 200px;
 }
+
+.product-quantity {
+    display: flex;
+    margin-bottom: 20px;
+    justify-content: center;
+}
+.product-quantity input {
+    text-align: center;
+}
